Coursera Deep Learning Week 4 Project

--- a/Monet Style Transfer with GANs Kaggle MiniProject.ipynb
+++ b/Monet Style Transfer with GANs Kaggle MiniProject.ipynb
@@ -148,6 +148,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Monet Style input images\n",
+    "\n",
     "![](images/monet_montage.png)"
    ]
   },
@@ -164,16 +166,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing\n",
+    "### Photo input images\n",
     "\n",
-    "As can be seen, the images are transformed to have values in between [-1,1], implemented with the function `decode_image()` above."
+    "![](images/photo_montage.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/photo_montage.png)"
+    "## Preprocessing\n",
+    "\n",
+    "As can be seen, the images are transformed to have values in between [-1,1], implemented with the function `decode_image()` above."
    ]
   },
   {
@@ -822,12 +826,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Git Repository"
+    "## Git Repository\n",
+    "\n",
+    "https://github.com/sandipan/Monet-Style-Transfer-with-GANs-Kaggle-Mini-Project\n",
+    "\n",
+    "## Kaggle Notebook\n",
+    "\n",
+    "https://www.kaggle.com/code/sandipanumbc/monet-style-transfer-with-cyclegan"
    ]
   },
   {
